[package]
name = "mcp-mutinynet"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
url = { version = "2.5", features = ["serde"] }
rpc-router = "0.1.3"
maplit = "1"
clap = { version = "4.5", features = ["derive"] }
signal-hook = "0.3"
reqwest = { version = "0.12.15", features = ["json"] }
home = "0.5.11"
